[package]
    authors       = ["Eric Evans (CireSnave@gmail.com)"]
    categories    = ["filesystem", "network-programming"]
    description   = "An easy to use file getter for local and remote files"
    documentation = "https://github.com/ciresnave/getit"
    edition       = "2021"
    homepage      = "https://github.com/ciresnave/getit"
    keywords      = ["file", "ftp"]
    license       = "MIT"
    name          = "getit"
    readme        = "README.md"
    repository    = "https://github.com/ciresnave/getit"
    version       = "0.1.0"

[dependencies]
    bytes    = "1.6.0"
    reqwest  = "0.12.4"
    suppaftp = { version = "6.0.1", features = ["native-tls"], optional = true }
    tokio    = { version = "1.37.0", features = ["full", "tracing"] }
    url      = "2.5.0"

[features]
    default = ["ftp"]
    ftp     = ["dep:suppaftp"]
